fixed the ui alignment of tags

--- a/components/store-collections.module.css
+++ b/components/store-collections.module.css
@@ -1,8 +1,8 @@
 .storeCollections {
-  position: absolute;
+  /* position: absolute;
   top: 0;
   left: 0;
-  right: 0;
+  right: 0; */
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
